<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2016 The CyanogenMod Project
     Copyright (C) 2016-2017 The MoKee Open Source Project
                   2017 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!--
     The parts catalog is used to locate items (usually a PreferenceScreen) inside
     of MKParts. This can be used by MKPartsPreference to create a simple, two-line
     entry point from Settings or another application. All entries should specify
     a fragment, which is a SettingsPreferenceFragment subclass inside MKParts.

     Metadata for the search index provider should be provided for all parts. This
     can be supplied an XML resource in the "mk:xmlRes" attribute or by implementing
     the Searchable interface.
-->
<parts-catalog xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:mk="http://schemas.android.com/apk/res/mokee.platform">

    <part android:key="battery_lights"
          android:title="@string/battery_light_title"
          android:fragment="org.mokee.mkparts.notificationlight.BatteryLightSettings"
          mk:xmlRes="@xml/battery_light_settings" />

    <part android:key="button_settings"
          android:title="@string/button_pref_title"
          android:fragment="org.mokee.mkparts.input.ButtonSettings"
          mk:xmlRes="@xml/button_settings" />

    <part android:key="contributors"
          android:title="@string/contributors_cloud_fragment_title"
          android:fragment="org.mokee.mkparts.contributors.ContributorsCloudFragment" />

    <part android:key="livedisplay"
          android:title="@*mokee.platform:string/live_display_title"
          android:summary="@string/live_display_summary"
          android:fragment="org.mokee.mkparts.livedisplay.LiveDisplaySettings"
          mk:xmlRes="@xml/livedisplay" />

    <part android:key="notification_lights"
          android:title="@string/notification_light_title"
          android:fragment="org.mokee.mkparts.notificationlight.NotificationLightSettings"
          mk:xmlRes="@xml/notification_light_settings" />

    <part android:key="privacy_settings"
          android:title="@string/privacy_settings_title"
          android:fragment="org.mokee.mkparts.PrivacySettings"
          mk:xmlRes="@xml/privacy_settings" />

    <part android:key="profiles_settings"
          android:title="@string/profiles_settings_title"
          android:fragment="org.mokee.mkparts.profiles.ProfilesSettings"
          mk:xmlRes="@xml/profiles_settings" />

    <part android:key="rotation"
          android:title="@string/display_rotation_title"
          android:fragment="org.mokee.mkparts.hardware.DisplayRotation"
          mk:xmlRes="@xml/display_rotation" />

    <part android:key="status_bar_settings"
          android:title="@string/status_bar_title"
          android:fragment="org.mokee.mkparts.statusbar.StatusBarSettings"
          mk:xmlRes="@xml/status_bar_settings" />

    <part android:key="power_menu"
          android:title="@string/power_menu_title"
          android:fragment="org.mokee.mkparts.input.PowerMenuActions"
          mk:xmlRes="@xml/power_menu_settings" />

    <part android:key="privacy_guard_manager"
          android:title="@*mokee.platform:string/privacy_guard_manager_title"
          android:fragment="org.mokee.mkparts.privacyguard.PrivacyGuardManager"
          mk:xmlRes="@xml/privacy_guard_prefs" />

    <part android:key="weather_settings"
          android:title="@string/weather_settings_title"
          android:fragment="org.mokee.mkparts.weather.WeatherServiceSettings"
          mk:xmlRes="@xml/weather_settings" />

    <part android:key="perf_profile_settings"
          android:title="@string/perf_profile_settings_title"
          android:summary="@string/perf_profile_settings_summary"
          android:fragment="org.mokee.mkparts.power.PerfProfileSettings"
          mk:xmlRes="@xml/perf_profile_settings" />

    <part android:key="expanded_desktop_settings"
          android:title="@string/expanded_desktop_settings_title"
          android:summary="@string/expanded_desktop_settings_summary"
          android:fragment="org.mokee.mkparts.applications.ExpandedDesktopSettings"
          mk:xmlRes="@xml/expanded_desktop_prefs" />

    <part android:key="charging_sounds_settings"
          android:title="@string/charging_sounds_settings_title"
          android:fragment="org.mokee.mkparts.sounds.ChargingSoundsSettings"
          mk:xmlRes="@xml/charging_sounds_settings" />

    <part android:key="touchscreen_gesture_settings"
          android:title="@string/touchscreen_gesture_settings_title"
          android:summary="@string/touchscreen_gesture_settings_summary"
          android:fragment="org.mokee.mkparts.gestures.TouchscreenGestureSettings"
          mk:xmlRes="@xml/touchscreen_gesture_settings" />

    <part android:key="fingerprint_shortcut_settings"
          android:title="@string/fingerprint_shortcut_settings_title"
          android:fragment="org.mokee.mkparts.fingerprint.FingerprintShortcutSettings"
          mk:xmlRes="@xml/fingerprint_shortcut_settings" />

    <part android:key="style"
          android:title="@string/style_title"
          android:summary="@string/style_summary"
          android:fragment="org.mokee.mkparts.style.StylePreferences"
          mk:xmlRes="@xml/style_preferences" />

    <part android:key="trust_interface"
          android:title="@string/trust_title"
          android:fragment="org.mokee.mkparts.trust.TrustPreferences"
          mk:xmlRes="@xml/trust_preferences" />
</parts-catalog>
